@@ -1,6 +1,8 @@
 since version 1.5.2
 ===================
  * fix for masked array inputs (issue #267).
+ * improved performance of the num2date algorithm, in some cases providing
+   an over 100x speedup (issue #269, PR#270).
 
 version 1.5.2 (release tag v1.5.2rel)
 =====================================
